# ciphora

./: .gitattributes  .gitignore  ARCHITECTURE.md  BYODB-PROVIDERS.md  CHANGELOG.md  CONTRIBUTING.md  EXTERNAL-CRYPTO-REVIEW.md  LICENSE  OPAQUE-PAKE-RESEARCH.md  PLATFORMS.md  README.md  REGRESSION.md  SECURITY.md  SYNC-CONFLICT-JOURNAL.md  SYSTEM.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.functions.json  vite.config.ts  wrangler.example.toml
.github/workflows/: android.yml  desktop.yml  release.yml  web.yml
android/app/: build.gradle
functions/: _middleware.ts
functions/_shared/: account.ts  auth.ts  crypto.ts  email.ts  env.ts  http.ts  opaque.ts
functions/api/: health.ts  sync-profile.ts
public/: _headers  manifest.webmanifest  sw.js
public/releases/: latest.json
schema/d1/: 0001_directory.sql  0002_identity.sql  0003_ops_runtime.sql  0004_identity_recovery_reset.sql  0005_identity_opaque_auth.sql  0005_ops_opaque_auth.sql  0006_ops_email_delivery.sql  0007_ops_email_provider_quotas.sql  0008_identity_sync_profile_d1_direct.sql  0009_identity_bridge_byodb_providers.sql  0010_identity_device_session_management.sql  0011_ops_opaque_challenge_fingerprint.sql  0012_ops_opaque_credential_epochs.sql  (+2 more)
scripts/: cleanup-regression-accounts.mjs  regression-smoke.mjs  turso-archive.mjs
src/: App.tsx  index.css  index.tsx  pwa.ts
src-tauri/: Cargo.toml  android-icon.manifest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+74 files in other folders)
