[package]
name = "ciphora"
version = "1.3.0"
description = "Ciphora encrypted local-first vault desktop shell"
authors = ["Ciphora"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ciphora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
